recursion.cons.lessons.recursion.cons.Last.scala.error
last:-6: error: Missing closing brace `}' assumed here
try {
^last:1: error: expected class or object definition
def last(l:List[Int]): Int = {
^